--- a/static/consulting.html
+++ b/static/consulting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Dec 21 2020 07:55:15 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 05 2021 16:31:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85a0bba25bf148ce79acb4" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -94,7 +94,7 @@
   <section class="widewrapper herowrapper w-container">
     <div class="herotext">
       <h1 class="heading">Build the <span class="text-span-4">engineering</span> backbone of an <span class="text-span-2">industry leader</span></h1>
-      <p class="subheader">We provide web/mobile architecture and workflows that accelerate your business growth.</p>
+      <p class="subheader">We provide web/mobile architecture and workflows that accelerate your business growth</p>
     </div>
     <div class="consultingheroimage"><img src="images/consulting-hero1.5x.png" loading="lazy" alt=""></div>
   </section>
