--- a/static/tools.html
+++ b/static/tools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Dec 21 2020 07:55:15 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 05 2021 16:31:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -93,35 +93,40 @@
   </div>
   <section class="widewrapper herowrapper w-container">
     <div class="herotext">
-      <h1 class="heading"><span class="text-span-27">Open source</span> Tools to make the complex <span class="text-span-26">simple</span></h1>
-      <p class="subheader">We create and maintain Open Source libraries that fill in gaps in the app development ecosystem.</p>
+      <h1 class="heading"><span class="text-span-27">Open source</span> Tools to make Testing easier<span class="text-span-26"></span></h1>
+      <p class="subheader">We create and maintain Open Source libraries that fill in gaps in the app development ecosystem, beginning with automated testing</p>
     </div>
     <div class="toolsheroimage"><img src="images/tools-hero1.5x.png" loading="lazy" srcset="images/tools-hero1.5x-p-500.png 500w, images/tools-hero1.5x.png 835w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 600px, 44vw" alt=""></div>
   </section>
-  <section class="bottomwrapper nobottomspace w-container">
-    <div class="dialoguequote sidequote">
-      <blockquote class="sidequote white">“BigTest is the testing framework I’ve always wanted to have. It takes all we’ve learned about testing and wraps it up in a coherent and powerful package.”</blockquote>
-      <p class="sidequoteauthor white">—Jonas Nicklas, Creator of Capybara, co-creator of BigTest</p>
+  <div class="bigquote-section dark">
+    <div class="bigquote-wrapper w-container">
+      <blockquote class="bigquote dark smallcaps">“<strong>BigTest is the testing framework I&#x27;ve always wanted to have. It takes all we&#x27;ve learned about testing and wraps it up in a coherent and powerful package.”</strong>‍</blockquote>
+      <p class="bigquote-author dark">— Jonas Nicklas, Creator of Capybara, co-creator of BigTest</p>
     </div>
-    <div class="cta-block variation2 bottomside addtip">
-      <h3 class="cta-intro">Come hang out in our OSS community</h3>
-      <a href="https://discord.gg/r6AvtnU" target="_blank" rel="nofollow" class="button purple w-button">Join our Discord</a>
+  </div>
+  <section class="feature-wrapper notopspace w-container">
+    <div class="feature-text">
+      <a href="https://frontside.com/bigtest/" target="_blank" rel="nofollow" class="headinglink w-inline-block">
+        <h2 class="heading-3"><span class="text-span-45">Interactors</span> — Test your app as real people use it</h2>
+      </a>
+      <p>Ready-to-use with Jest and Cypress, BigTest Interactors make it easy to test UIs at scale while keeping accessibility at the core.</p>
+      <a href="https://frontside.com/bigtest/" target="_blank" rel="nofollow" class="button topage w-button">Get started</a>
     </div>
-  </section>
-  <section class="bottomwrapper notopspace w-container">
-    <div class="dialogcta emptytip"></div>
+    <div class="feature-image centered"><img src="images/interactors-teaser1.5x.png" loading="eager" srcset="images/interactors-teaser1.5x.png 500w, images/interactors-teaser1.5x.png 941w" sizes="400px" alt="" class="bigtestside"></div>
   </section>
   <section class="feature-wrapper notopspace w-container">
     <div class="feature-text">
-      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="headinglink w-inline-block">
-        <h2 class="heading-3"><span class="text-span-45">BigTest</span> — truly cross-browser testing made easy</h2>
+      <a href="https://frontside.com/bigtest/platform" target="_blank" rel="nofollow" class="headinglink w-inline-block">
+        <h2 class="heading-3"><span class="text-span-50">BigTest platform</span> — truly cross-browser testing made easy</h2>
       </a>
       <p>BigTest’s novel architecture combines the sophistication of modern tooling, our decades-long experience writing tests, plus all the lessons learned from Capybara, Rail’s famous end-to-end testing framework. </p>
-      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="button topage w-button">Learn more</a>
-      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="button topage arrow w-button">→</a>
+      <a href="https://frontside.com/bigtest/platform" target="_blank" rel="nofollow" class="button topage w-button">Learn more</a>
     </div>
     <div class="feature-image centered"><img src="images/testing-devices2x.png" loading="eager" width="505.5" sizes="400px" srcset="images/testing-devices2x-p-500.png 500w, images/testing-devices2x.png 1104w" alt="" class="bigtestside"></div>
   </section>
+  <div class="centeredcontainer w-container">
+    <h2 class="meet-the-team">More of our tools:</h2>
+  </div>
   <div class="tools-list-wrap">
     <div class="valuebox tool">
       <h3 class="valuetitle"><span class="text-span-46">Affection</span>: algebraic effects API</h3>
