--- a/static/contact-thanks.html
+++ b/static/contact-thanks.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Dec 21 2020 07:55:15 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 05 2021 16:31:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fb254240cbef141bb1db2c7" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -92,7 +92,7 @@
   <div class="home-hero contact">
     <div class="herotext cenetered">
       <h1 class="heading centered">Thanks!</h1>
-      <p class="subheader centered">We&#x27;ll get back to you<br>within one business day.</p>
+      <p class="subheader centered">We&#x27;ll get back to you<br>within one business day</p>
     </div>
   </div>
   <footer class="footerwrapper w-container">
