--- a/static/privacy-policy.html
+++ b/static/privacy-policy.html
@@ -107,13 +107,13 @@
       <p>‍</p>
       <h2><strong>1. WHAT INFORMATION DO WE COLLECT?</strong></h2>
       <h3><strong>Personal information you disclose to us<em>‍</em></strong></h3>
-      <p><em>In Short:  We collect personal information that you provide to us.</em>‍</p>
+      <p><em>We collect personal information that you provide to us.</em>‍</p>
       <p>We collect personal information that you voluntarily provide to us when you express an interest in obtaining information about us or our products and Services, when you participate in activities on the Website (such as by posting messages in our online forums or entering competitions, contests or giveaways) or otherwise when you contact us.</p>
       <p>The personal information that we collect depends on the context of your interactions with us and the Website, the choices you make and the products and features you use. The personal information we collect may include the following:<strong>‍</strong></p>
       <p><strong>Personal Information Provided by You.</strong> We collect names; email addresses; job titles; phone numbers; billing addresses; debit/credit card numbers; and other similar information.</p>
       <p>All personal information that you provide to us must be true, complete and accurate, and you must notify us of any changes to such personal information.<strong>‍</strong></p>
       <h3><strong>Information automatically collected<em>‍</em></strong></h3>
-      <p><em>In Short:  Some information such as your Internet Protocol (IP) address and/or browser and device characteristics is collected automatically when you visit our Website.</em>‍</p>
+      <p><em>Some information such as your Internet Protocol (IP) address and/or browser and device characteristics is collected automatically when you visit our Website.</em>‍</p>
       <p>We automatically collect certain information when you visit, use or navigate the Website. This information does not reveal your specific identity (like your name or contact information) but may include device and usage information, such as your IP address, browser and device characteristics, operating system, language preferences, referring URLs, device name, country, location, information about how and when you use our Website and other technical information. This information is primarily needed to maintain the security and operation of our Website, and for our internal analytics and reporting purposes.</p>
       <p>Like many businesses, we also collect information through cookies and similar technologies.</p>
       <p>The information we collect includes:</p>
@@ -124,7 +124,7 @@
       </ul>
       <p>‍</p>
       <h2>‍<strong>2. HOW DO WE USE YOUR INFORMATION?<em>‍</em></strong></h2>
-      <p><em>In Short:  We process your information for purposes based on legitimate business interests, the fulfillment of our contract with you, compliance with our legal obligations, and/or your consent.</em></p>
+      <p><em>We process your information for purposes based on legitimate business interests, the fulfillment of our contract with you, compliance with our legal obligations, and/or your consent.</em></p>
       <p>We use personal information collected via our Website for a variety of business purposes described below. We process your personal information for these purposes in reliance on our legitimate business interests, in order to enter into or perform a contract with you, with your consent, and/or for compliance with our legal obligations. We indicate the specific processing grounds we rely on next to each purpose listed below.</p>
       <p>We use the information we collect or receive:</p>
       <ul role="list">
@@ -137,7 +137,7 @@
       </ul>
       <p><br></p>
       <h2><strong>3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</strong></h2>
-      <p><em>In Short:  We only share information with your consent, to comply with laws, to provide you with services, to protect your rights, or to fulfill business obligations.</em></p>
+      <p><em>We only share information with your consent, to comply with laws, to provide you with services, to protect your rights, or to fulfill business obligations.</em></p>
       <p>We may process or share your data that we hold based on the following legal basis:</p>
       <ul role="list">
         <li><strong>Consent:</strong> We may process your data if you have given us specific consent to use your personal information for a specific purpose.</li>
@@ -152,24 +152,24 @@
       </ul>
       <p>‍</p>
       <h2><strong>4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</strong></h2>
-      <p><em>In Short:  We may use cookies and other tracking technologies to collect and store your information.</em></p>
+      <p><em>We may use cookies and other tracking technologies to collect and store your information.</em></p>
       <p>We may use cookies and similar tracking technologies (like web beacons and pixels) to access or store information. Specific information about how we use such technologies and how you can refuse certain cookies is set out in our Cookie Notice.</p>
       <p><br></p>
       <h2><strong>5. HOW LONG DO WE KEEP YOUR INFORMATION?</strong></h2>
-      <p><em>In Short:  We keep your information for as long as necessary to fulfill the purposes outlined in this privacy notice unless otherwise required by law.</em></p>
+      <p><em>We keep your information for as long as necessary to fulfill the purposes outlined in this privacy notice unless otherwise required by law.</em></p>
       <p>We will only keep your personal information for as long as it is necessary for the purposes set out in this privacy notice, unless a longer retention period is required or permitted by law (such as tax, accounting or other legal requirements). No purpose in this notice will require us keeping your personal information for longer than 1 year.</p>
       <p>When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymize such information, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.</p>
       <p><br></p>
       <h2><strong>6. HOW DO WE KEEP YOUR INFORMATION SAFE?</strong></h2>
-      <p><em>In Short:  We aim to protect your personal information through a system of organizational and technical security measures.</em></p>
+      <p><em>We aim to protect your personal information through a system of organizational and technical security measures.</em></p>
       <p>We have implemented appropriate technical and organizational security measures designed to protect the security of any personal information we process. However, despite our safeguards and efforts to secure your information, no electronic transmission over the Internet or information storage technology can be guaranteed to be 100% secure, so we cannot promise or guarantee that hackers, cybercriminals, or other unauthorized third parties will not be able to defeat our security, and improperly collect, access, steal, or modify your information. Although we will do our best to protect your personal information, transmission of personal information to and from our Website is at your own risk. You should only access the Website within a secure environment.</p>
       <p><br></p>
       <h2><strong>7. DO WE COLLECT INFORMATION FROM MINORS?</strong></h2>
-      <p><em>In Short:  We do not knowingly collect data from or market to children under 18 years of age.</em></p>
+      <p><em>We do not knowingly collect data from or market to children under 18 years of age.</em></p>
       <p>We do not knowingly solicit data from or market to children under 18 years of age. By using the Website, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependentâ€™s use of the Website. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we may have collected from children under age 18, please contact us at privacy@frontside.com.</p>
       <p><br></p>
       <h2><strong>8. WHAT ARE YOUR PRIVACY RIGHTS?</strong></h2>
-      <p><em>In Short:  You may review, change, or terminate your account at any time.</em></p>
+      <p><em>You may review, change, or terminate your account at any time.</em></p>
       <p>If you are a resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details here: <a href="http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm">http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm</a>.</p>
       <p>If you are a resident in Switzerland, the contact details for the data protection authorities are available here: <a href="https://www.edoeb.admin.ch/edoeb/en/home.html">https://www.edoeb.admin.ch/edoeb/en/home.html</a>.<br></p>
       <p><strong>Cookies and similar technologies:</strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Website. To opt-out of interest-based advertising by advertisers on our Website visit <a href="http://www.aboutads.info/choices/">http://www.aboutads.info/choices/</a>.</p>
@@ -178,7 +178,7 @@
       <p>Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track (&quot;DNT&quot;) feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. At this stage no uniform technology standard for recognizing and implementing DNT signals has been finalized. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this privacy notice. </p>
       <p>‍</p>
       <h2>‍<strong>10. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</strong></h2>
-      <p><em>In Short:  Yes, if you are a resident of California, you are granted specific rights regarding access to your personal information.</em></p>
+      <p><em>Yes, if you are a resident of California, you are granted specific rights regarding access to your personal information.</em></p>
       <p>California Civil Code Section 1798.83, also known as the &quot;Shine The Light&quot; law, permits our users who are California residents to request and obtain from us, once a year and free of charge, information about categories of personal information (if any) we disclosed to third parties for direct marketing purposes and the names and addresses of all third parties with which we shared personal information in the immediately preceding calendar year. If you are a California resident and would like to make such a request, please submit your request in writing to us using the contact information provided below.</p>
       <p>If you are under 18 years of age, reside in California, and have a registered account with the Website, you have the right to request removal of unwanted data that you publicly post on the Website. To request removal of such data, please contact us using the contact information provided below, and include the email address associated with your account and a statement that you reside in California. We will make sure the data is not publicly displayed on the Website, but please be aware that the data may not be completely or comprehensively removed from all our systems (e.g. backups, etc.).</p>
       <p><br></p>
@@ -238,7 +238,7 @@
       <p>To exercise these rights, you can contact us by email at privacy@frontside.com, or by referring to the contact details at the bottom of this document. If you have a complaint about how we handle your data, we would like to hear from you.</p>
       <p>‍<br></p>
       <h2><strong>11. DO WE MAKE UPDATES TO THIS NOTICE?</strong></h2>
-      <p><em>In Short:  Yes, we will update this notice as necessary to stay compliant with relevant laws.</em></p>
+      <p><em>Yes, we will update this notice as necessary to stay compliant with relevant laws.</em></p>
       <p>We may update this privacy notice from time to time. The updated version will be indicated by an updated &quot;Revised&quot; date and the updated version will be effective as soon as it is accessible. If we make material changes to this privacy notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this privacy notice frequently to be informed of how we are protecting your information.</p>
       <p>‍<br></p>
       <h2><strong>12. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</strong></h2>
