--- a/static/contact.html
+++ b/static/contact.html
@@ -74,7 +74,7 @@
             <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog &amp; Podcast</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" aria-current="page" class="button cta nav in w-button w--current">Contact</a>
