--- a/static/tools.html
+++ b/static/tools.html
@@ -76,7 +76,7 @@
             <a href="/tools" aria-current="page" class="main-nav-link w-nav-link w--current">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog &amp; Podcast</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" class="button cta nav in w-button">Contact</a>
