Update Jeffrey’s title

--- a/static/about.html
+++ b/static/about.html
@@ -163,7 +163,7 @@
     <div class="person-intro">
       <div class="person-info">
         <h3 class="person-intro-title">Jeffrey Cherewaty</h3>
-        <div class="person-title"><strong>Engineering Consultant</strong></div>
+        <div class="person-title"><strong>COO</strong></div>
         <div class="person-intro-meta">Austin, Texas</div>
         <p>After succeeding in the trenches of the startup world—leading frontend teams through hyper-growth and a decade consulting for global corporations—Jeffrey now calls himself a &quot;software diplomat.&quot; With a masters in Software Engineering from The University of Texas at Austin, he facilitates technical conversations and rolls up his sleeves to make change happen. </p>
       </div>
