Update Jeffrey’s title (#120)
* Update Jeffrey’s title

* Re-arrange order

--- a/static/about.html
+++ b/static/about.html
@@ -153,21 +153,21 @@
     </div>
     <div class="person-intro">
       <div class="person-info">
-        <h3 class="person-intro-title">Rachelle Stewart</h3>
-        <div class="person-title">Business Administrator</div>
-        <div class="person-intro-meta">Richmond, Virginia</div>
-        <p>After leaving the U.S. Airforce, Rachelle began her decade-long career in business administration. She has successfully managed two businesses of her own and earned an MBA from Capella University.  She now orchestrates financial and legal affairs at Frontside and is at the core of its strategic planning.</p>
-      </div>
-      <div class="person-picture"><img src="images/rachelle.jpg" loading="lazy" width="500" alt="Portrait of Rachelle. She&#x27;s wearing a hat and has curly hair." class="person-image"></div>
-    </div>
-    <div class="person-intro">
-      <div class="person-info">
         <h3 class="person-intro-title">Jeffrey Cherewaty</h3>
-        <div class="person-title"><strong>Engineering Consultant</strong></div>
+        <div class="person-title"><strong>COO</strong></div>
         <div class="person-intro-meta">Austin, Texas</div>
         <p>After succeeding in the trenches of the startup world—leading frontend teams through hyper-growth and a decade consulting for global corporations—Jeffrey now calls himself a &quot;software diplomat.&quot; With a masters in Software Engineering from The University of Texas at Austin, he facilitates technical conversations and rolls up his sleeves to make change happen. </p>
       </div>
       <div class="person-picture"><img src="images/jeffrey1.5x-100.jpg" loading="lazy" width="371" sizes="(max-width: 479px) 77vw, (max-width: 767px) 371px, (max-width: 991px) 300px, 350px" srcset="images/jeffrey1.5x-100-p-500.jpeg 500w, images/jeffrey1.5x-100.jpg 557w" alt="Portrait of Jeffrey. He has a short haircut and no beard." class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Rachelle Stewart</h3>
+        <div class="person-title">Business Administrator</div>
+        <div class="person-intro-meta">Richmond, Virginia</div>
+        <p>After leaving the U.S. Air Force, Rachelle began her decade-long career in business administration. She has successfully managed two businesses of her own and earned an MBA from Capella University.  She now orchestrates financial and legal affairs at Frontside and is at the core of its strategic planning.</p>
+      </div>
+      <div class="person-picture"><img src="images/rachelle.jpg" loading="lazy" width="500" alt="Portrait of Rachelle. She&#x27;s wearing a hat and has curly hair." class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
