Adds Paul to the about page

--- a/static/about.html
+++ b/static/about.html
@@ -147,7 +147,7 @@
         <h3 class="person-intro-title">Taras Mankovski</h3>
         <div class="person-title">CEO</div>
         <div class="person-intro-meta">Toronto, Canada</div>
-        <p>Taras began his journey into the realm of digital technology when in early 2000s his first clients started asking him to build websites. He quickly realized that rather than go it alone how much more satisfying it was to bring together cross disciplinary teams to work collaboratively towards common goals. At Frontside, Taras creates and nourishes relationships among his team, clients and partners to achieve ambitious long-term objectives</p>
+        <p>Taras began his journey into the realm of digital technology when in early 2000s his first clients started asking him to build websites. He quickly realized that rather than go it alone how much more satisfying it was to bring together cross disciplinary teams to work collaboratively towards common goals. At Frontside, Taras creates and nourishes relationships among his team, clients and partners to achieve ambitious long-term objectives.</p>
       </div>
       <div class="person-picture"><img src="images/taras1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/taras1.5x-100-p-500.jpeg 500w, images/taras1.5x-100.jpg 557w" alt="Portrait of Taras. He has long straight hair. He has no beard in this picture but usually fashions a short stubble. " class="person-image"></div>
     </div>
@@ -168,6 +168,15 @@
         <p>After leaving the U.S. Air Force, Rachelle began her decade-long career in business administration. She has successfully managed two businesses of her own and earned an MBA from Capella University.  She now orchestrates financial and legal affairs at Frontside and is at the core of its strategic planning.</p>
       </div>
       <div class="person-picture"><img src="images/rachelle.jpg" loading="lazy" width="500" alt="Portrait of Rachelle. She&#x27;s wearing a hat and has curly hair." class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Paul Cowan</h3>
+        <div class="person-title">Engineering Consultant</div>
+        <div class="person-intro-meta">Glasgow, Scotland (UK)</div>
+        <p>In his more than 20 years of experience, Paul has done it all: from leading the entire frontend division of a key public institution to working on one of the most famous worldwide yacht races. Indeed, large British banks also carry Paul&#x27;s work in their codebases. Not only is he an elite developer, but he also shines in Competitive Boxing and MMA. At Frontside, Paul specializes in building tools and automation that power up developers.</p>
+      </div>
+      <div class="person-picture"><img src="images/Paul.jpg" loading="lazy" width="500" alt="Portrait of Paul sporting trimmed haircut and beard. " class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -201,7 +210,7 @@
         <h3 class="person-intro-title">Min Kim</h3>
         <div class="person-title"><strong>Associate Engineering Consultant</strong></div>
         <div class="person-intro-meta">Toronto, Canada</div>
-        <p>Min&#x27;s career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines, as well as researching new technologies as they emerge.</p>
+        <p>Min&#x27;s career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines as well as researching new technologies as they emerge.</p>
       </div>
       <div class="person-picture"><img src="images/min1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/min1.5x-100-p-500.jpeg 500w, images/min1.5x-100.jpg 557w" alt="Portrait of Min. He&#x27;s wearing round glasses and has medium-long hair. He&#x27;s holding a cello." class="person-image"></div>
     </div>
