Adds openmic banner to homepage

--- a/static/about.html
+++ b/static/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jan 08 2021 14:25:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Mar 20 2021 12:04:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f8432592616248537dab3da" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,6 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/frontside-website.webflow.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://use.typekit.net/gyc5wys.css" />
-
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -76,7 +75,7 @@
             <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Blog &amp; Podcast</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" class="button cta nav in w-button">Contact</a>
@@ -147,7 +146,7 @@
         <h3 class="person-intro-title">Taras Mankovski</h3>
         <div class="person-title">CEO</div>
         <div class="person-intro-meta">Toronto, Canada</div>
-        <p>Taras began his journey into the realm of digital technology when in early 2000s his first clients started asking him to build websites. He quickly realized that rather than go it alone how much more satisfying it was to bring together cross disciplinary teams to work collaboratively towards common goals. At Frontside, Taras creates and nourishes relationships among his team, clients and partners to achieve ambitious long-term objectives.</p>
+        <p>Taras began his journey into the realm of digital technology when in early 2000s his first clients started asking him to build websites. He quickly realized that rather than go it alone how much more satisfying it was to bring together cross disciplinary teams to work collaboratively towards common goals. At Frontside, Taras creates and nourishes relationships among his team, clients and partners to achieve ambitious long-term objectives</p>
       </div>
       <div class="person-picture"><img src="images/taras1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/taras1.5x-100-p-500.jpeg 500w, images/taras1.5x-100.jpg 557w" alt="Portrait of Taras. He has long straight hair. He has no beard in this picture but usually fashions a short stubble. " class="person-image"></div>
     </div>
@@ -210,7 +209,7 @@
         <h3 class="person-intro-title">Min Kim</h3>
         <div class="person-title"><strong>Associate Engineering Consultant</strong></div>
         <div class="person-intro-meta">Toronto, Canada</div>
-        <p>Min&#x27;s career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines as well as researching new technologies as they emerge.</p>
+        <p>Min&#x27;s career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines, as well as researching new technologies as they emerge.</p>
       </div>
       <div class="person-picture"><img src="images/min1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/min1.5x-100-p-500.jpeg 500w, images/min1.5x-100.jpg 557w" alt="Portrait of Min. He&#x27;s wearing round glasses and has medium-long hair. He&#x27;s holding a cello." class="person-image"></div>
     </div>
