--- a/static/contact.html
+++ b/static/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jan 08 2021 14:25:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Mar 20 2021 12:04:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5faea4534d61150d591f8411" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -17,7 +17,6 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/frontside-website.webflow.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://use.typekit.net/gyc5wys.css" />
-
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -74,7 +73,7 @@
             <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Blog &amp; Podcast</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" aria-current="page" class="button cta nav in w-button w--current">Contact</a>
