--- a/static/tools.html
+++ b/static/tools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jan 08 2021 14:25:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Mar 20 2021 12:04:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,6 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/frontside-website.webflow.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://use.typekit.net/gyc5wys.css" />
-
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -76,7 +75,7 @@
             <a href="/tools" aria-current="page" class="main-nav-link w-nav-link w--current">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Blog &amp; Podcast</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" class="button cta nav in w-button">Contact</a>
@@ -113,7 +112,7 @@
       <p>Ready-to-use with Jest and Cypress, BigTest Interactors make it easy to test UIs at scale while keeping accessibility at the core.</p>
       <a href="https://frontside.com/bigtest/" target="_blank" rel="nofollow" class="button topage w-button">Get started</a>
     </div>
-    <div class="feature-image centered"><img src="images/interactors-teaser1.5x.png" loading="eager" srcset="images/interactors-teaser1.5x-p-500.png 500w, images/interactors-teaser1.5x.png 941w" sizes="400px" alt="" class="bigtestside"></div>
+    <div class="feature-image centered"><img src="images/interactors-teaser1.5x.png" loading="eager" srcset="images/interactors-teaser1.5x-p-500.png 500w, images/interactors-teaser1.5x.png 941w" sizes="100vw" alt="" class="bigtestside"></div>
   </section>
   <section class="feature-wrapper notopspace w-container">
     <div class="feature-text">
