--- a/static/contact-thanks.html
+++ b/static/contact-thanks.html
@@ -63,7 +63,7 @@
             <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog &amp; Podcast</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" class="button cta nav in w-button">Contact</a>
