Update interactor package name in blog post

--- a/static/tools.html
+++ b/static/tools.html
@@ -99,7 +99,7 @@
       <a href="https://frontside.com/bigtest/" target="_blank" rel="nofollow" class="headinglink w-inline-block">
         <h2 class="heading-3"><span class="text-span-45">Interactors</span> — Test your app as real people use it</h2>
       </a>
-      <p>Ready-to-use with Jest and Cypress, BigTest Interactors make it easy to test UIs at scale while keeping accessibility at the core.</p>
+      <p>Ready-to-use with Jest and Cypress, Interactors make it easy to test UIs at scale while keeping accessibility at the core.</p>
       <a href="https://frontside.com/bigtest/" target="_blank" rel="nofollow" class="button topage w-button">Get started</a>
     </div>
     <div class="feature-image centered"><img src="images/interactors-teaser1.5x.png" loading="eager" srcset="images/interactors-teaser1.5x-p-500.png 500w, images/interactors-teaser1.5x.png 941w" sizes="100vw" alt="" class="bigtestside"></div>
