Update Austin address

--- a/static/code-of-conduct.html
+++ b/static/code-of-conduct.html
@@ -146,7 +146,7 @@
       <a href="/contact" class="footerlink">Contact</a>
     </nav>
     <a href="/" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
-    <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
+    <p class="footer-notes"><br>2301 W Anderson Ln #102-8<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
     <div class="copyright w-richtext">
       <p>
