--- a/static/privacy-policy.html
+++ b/static/privacy-policy.html
@@ -231,7 +231,7 @@
       <h2><strong>12. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</strong></h2>
       <p>If you have questions or comments about this notice, you may email us at privacy@frontside.com or by post to:<br></p>
       <p>The Frontside Software, Inc</p>
-      <p>2301 W Anderson Ln #107</p>
+      <p>2301 W Anderson Ln #102-8</p>
       <p>Austin, TX 78757</p>
       <p>United States</p>
       <p><br></p>
@@ -252,7 +252,7 @@
       <a href="/contact" class="footerlink">Contact</a>
     </nav>
     <a href="/" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
-    <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
+    <p class="footer-notes"><br>2301 W Anderson Ln #102-8<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
     <div class="copyright w-richtext">
       <p>
